# env-guard-cli

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
env_guard/: __init__.py  cli.py  scanner.py
tests/: test_scanner.py
